--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": "20.x || 22.x || 24.x"
+		"node": "22.x || 24.x"
 	},
 	"keywords": [
 		"waveform",
@@ -43,10 +43,10 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.38.0",
-		"@tsconfig/node20": "^20.1.6",
+		"@tsconfig/node22": "^22.0.2",
 		"@types/mime-types": "^3.0.1",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^22.18.12",
+		"@types/node": "^24.9.1",
 		"@types/yargs": "^17.0.34",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
